  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2005-07-27   Christian Stimming <stimming@tuhh.de>

	* gwenui/tablewidget.c, textwidget.c, widget.c: Fix gcc4 warnings
	about different pointer signedness by adapting char* and unsigned
	char* pointers to the actual function prototypes.

2005/07/27: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_BufferedIO_ReadRawForced() now returns an error (not a warning) when
  only partial data has been read
- GWEN_MsgEngine: removed '"' from list of default delimiters
- GWEN_MsgEngine: removed '"' from list of characters to escape


2005/07/26: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_CryptKey_SetKeySpec()
- added gct-tool command "readkey"
- added blowfish encryption/decryption when using OpenSSL
- function GWEN_PluginDescription_GetLongDescrByFormat() now tries to find
  the localized version of the long description
- added gct-tool command "changepin"
- bufferedio: Now uses severity "error" instead of "warn" in some places
- fixed a bug in error.c
- GWEN_Error_GetSimpleCode() now reacts on warnings, too


2005/07/24: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added type GWEN_CRYPTTOKEN_CONTEXTTYPE


2005/07/21: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_TLV_create()
- added function GWEN_TLV_toBuffer()
- added function GWEN_TLV_DirectlyToBuffer()
- added function GWEN_PluginDescription_dup()
- added function GWEN_PluginManager_GetPluginDescr()
- csv-plugin: Now returns GWEN_DBIO_CheckFileResultUnknown instead of
  GWEN_DBIO_CheckFileResultOk. This will allow AqBanking to also present
  other plugins when searching for importers